<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StartActivity">


    <ImageView
        android:id="@+id/troop1Choose"
        android:layout_width="82dp"
        android:layout_height="193dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapChoose"
        tools:ignore="MissingConstraints,RtlCompat" />

    <ImageView
        android:id="@+id/troop3Choose"
        android:layout_width="88dp"
        android:layout_height="191dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapChoose"
        tools:ignore="MissingConstraints,RtlCompat" />

    <ImageView
        android:id="@+id/troop2Choose"
        android:layout_width="84dp"
        android:layout_height="191dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapChoose"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/mapChoose"
        android:layout_width="362dp"
        android:layout_height="197dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_launcher_background"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.612"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="157dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="68dp"
        android:text="@string/abordage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/quitbutton"
        android:layout_width="152dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="68dp"
        android:text="@string/jeter_l_ancre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/startbutton"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="44dp"
        android:layout_height="19dp"
        android:text="@string/troops"
        app:layout_constraintBottom_toTopOf="@+id/troop1Choose"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="30dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        app:layout_constraintBottom_toTopOf="@+id/mapChoose"
        tools:ignore="MissingConstraints,RtlCompat"
        tools:layout_editor_absoluteX="30dp" />

</androidx.constraintlayout.widget.ConstraintLayout>